overflow fix

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,6 @@ body{
   justify-content: flex-start;
   align-items: center;
   padding-top: 20px;
-  overflow: hidden;
 }
 
 /* Style the tab */
